--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "追哥电影",
+    "name" : "追哥影资天气",
     "appid" : "__UNI__79B671C",
     "description" : "电影预告",
     "versionName" : "1.0.0",
